--- a/yellow.html
+++ b/yellow.html
@@ -10,7 +10,7 @@ p    {color: saddlebrown;}
   </head>
   <body>
      <h1>Yellow Painting</h1>
-<img src="images/yellow.jpg"style="width:600px;"> 
+<img src="yellow.jpg"style="width:600px;"> 
 
 <p>Painted from a photo. </p>
 <br>
