--- a/womanportrait.html
+++ b/womanportrait.html
@@ -10,7 +10,7 @@ p    {color: darkslategrey;}
   </head>
   <body>
      <h1>Portrait of Woman</h1>
-<img src="images/womanportrait.jpg"style="width:600px;"> 
+<img src="womanportrait.jpg"style="width:600px;"> 
 
 <p>My first sketch portrait. </p>
 <br>
