--- a/sketchreference.html
+++ b/sketchreference.html
@@ -10,7 +10,7 @@ p    {color: darkslategrey;}
   </head>
   <body>
      <h1>Sketch from Reference</h1>
-<img src="images/1streference.jpg"style="width:600px;"> 
+<img src="1streference.jpg"style="width:600px;"> 
 
 <p>One of my first sketch from reference. </p>
 <br>
