--- a/selfportrait.html
+++ b/selfportrait.html
@@ -10,7 +10,7 @@ p    {color: black;}
   </head>
   <body>
      <h1>Self Portrait</h1>
-<img src="images/selfportraitgreen.png"style="width:600px;"> 
+<img src="selfportraitgreen.png"style="width:600px;"> 
 
 <p>This was a self portrait I did while experimenting and stepping out my comfort zone with a new style. </p>
 <br>
