--- a/manportrait.html
+++ b/manportrait.html
@@ -10,7 +10,7 @@ p    {color: darkslategrey;}
   </head>
   <body>
      <h1>Portrait of Man</h1>
-<img src="images/manportrait.jpg"style="width:600px;"> 
+<img src="manportrait.jpg"style="width:600px;"> 
 
 <p>A sketch of a man from reference. </p>
 <br>
