--- a/hw8.html
+++ b/hw8.html
@@ -10,7 +10,7 @@ p    {color: navy;}
   </head>
   <body>
      <h1>Sims 4 Graph</h1>
-<img src="images/homework8.jpg"style="width:800px;">
+<img src="homework8.jpg"style="width:800px;">
 <p>I chose to pick an existing survey regarding people's favorite Sims 4 game pack because this was one of the first ever games that I've played and still do up to this day.</p>
 <br>
 <a href="index.html">Back to Home</a>
