--- a/hw7.html
+++ b/hw7.html
@@ -10,7 +10,7 @@ p    {color: purple;}
   </head>
   <body>
      <h1>Blinking Eyes</h1>
-<img src="images/homework7eyes.gif"style="width:500px;">
+<img src="homework7eyes.gif"style="width:500px;">
 <p>The homework was to create a gif of eyes blinking using Adobe illustrator and photoshop.</p>
 <br>
 <a href="index.html">Back to Home</a>
