--- a/hw4.html
+++ b/hw4.html
@@ -10,7 +10,7 @@ p    {color: lightgoldenrodyellow;}
   </head>
   <body>
      <h1>Cutout</h1>
-<img src="images/homework4.jpg"style="width:500px;">
+<img src="homework4.jpg"style="width:500px;">
 <p></p>
 <br>
 <a href="index.html">Back to Home</a>
