--- a/hw2.html
+++ b/hw2.html
@@ -10,7 +10,7 @@ p    {color: darkred;}
   </head>
   <body>
      <h1>Depth of Field</h1>
-<img src="images/homework2.jpg"style="width:500px;">
+<img src="homework2.jpg"style="width:500px;">
 <p>This was one of my first attempts experimenting with depth of field with the camera provided at school.</p>
 <br>
 <a href="index.html">Back to Home</a>
