--- a/hw1.html
+++ b/hw1.html
@@ -10,9 +10,9 @@ p    {color: purple;}
   </head>
   <body>
      <h1>Using Photoshop to edit images</h1>
-<img src="images/homework1.jpg"style="width:500px;">
-<img src="images/homework1.2.jpg"style="width:600px;">
-<p>I knew I wanted to go for an eerie feel to the pictures. I saturated both images, but I increased the red in the left picture to almost emulate a sense of urgency. On the right, I edited it to be more colorful because it feels like something that I'd see in a video game.</p>
+<img src="homework1.jpg"style="width:500px;">
+<img src="homework1.2.jpg"style="width:600px;">
+<p>I knew I wanted to go for an eerie feel to the pictures. I saturated both images and increased the red in the left picture to almost emulate a sense of urgency. On the right, I edited it to be more colorful because it feels like something that I'd see in a video game.</p>
 <br>
 <a href="index.html">Back to Home</a>
   </body>
