--- a/emotionsofartists.html
+++ b/emotionsofartists.html
@@ -10,7 +10,7 @@ p    {color: indianred;}
   </head>
   <body>
      <h1>Emotions of Artists</h1>
-<img src="images/Emotions of artists.png"style="width:600px;"> 
+<img src="Emotions of artists.png"style="width:600px;"> 
 
 <p>This was a zine piece I created back in 2023 when I interned at Groundswell. </p>
 <br>
